# sicore

./: .gitignore  LICENSE  README.md  README_ja.md  check_uniformity.md  pyproject.toml  setup.py
docs/: .buildinfo  conf.py  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  search.html  searchindex.js  sicore.html
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  sicore.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  sicore.html
docs/_build/html/_sources/: modules.rst.txt  sicore.rst.txt
docs/_sources/: index.rst.txt  sicore.inference.rst.txt  sicore.rst.txt
docs/doctrees/: environment.pickle  index.doctree  sicore.inference.doctree
docs_make/: __init__.py  conf.py  make.py
html/: objects.inv  search.html
references/: conf.py
sicore/: __init__.py  cdf_approx.py  cdf_mpmath.py  figures.py  intervals.py  utils.py
sicore/core/: __init__.py  base.py  cdf.py  real_subset.py
sicore/inference/: base.py  chi.py  chi_squared.py  chisquared.py  norm.py
sicore/main/: __init__.py  inference.py
sicore/utils/: __init__.py  constructor.py  evaluation.py  figure.py  intervals.py  non_gaussian.py  uniformity_test.py
sicorev2/: __init__.py
sicorev2/core/: base.py  cdf.py  chi.py  norm.py  real_subset.py  utils.py
sicorev2/utils/: constructor.py  evaluation.py  intervals.py  solver.py
tests/: __init__.py  test_cdf_mpmath.py  test_core_cdf.py  test_core_real_subset.py  test_main_inference.py  test_utils.py  test_utils_constructor.py  test_utils_evaluation.py  test_utils_intervals.py  test_utils_non_gaussian.py
