[project]
name = "sicore"
version = "2.0.6"
description = "Core Package for Selective Inference"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.4,<2.0.0",
    "mpmath>=1.3.0",
    "matplotlib>=3.9.1",
    "scipy>=1.14.0",
    "joblib>=1.4.2",
]
authors = [{ name = "Takeuchi Lab" }]
maintainers = [{ name = "Tomohiro Shiraishi", email = "shirara1016@gmail.com" }]
license = "MIT"

[project.urls]
documentation = "https://shirara1016.github.io/sicore/"
repository = "https://github.com/shirara1016/sicore"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["tests/", "docs/", "docs_make/", ".vscode"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
    "pytest>=8.3.2",
    "mypy>=1.11.1",
    "ipykernel>=6.29.5",
    "sphinx>=8.0.2",
    "furo>=2024.8.6",
    "torch>=2.4.0",
]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv"]
select = ["ALL"]
ignore = [
    "E741",    # ambiguous variable name
    "PLR0912", # too many branches
    "PLR0913", # too many arguments in function definition
    "PLR0915", # too many statements
    "C901",    # function too complex
    "E501",    # line too long
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "S101",   # use of assert
    "FBT001", # boolean argument
]
"tests/test_main_inference.py" = [
    "N803", # argument name should be lowercase
    "N806", # variable in function should be lowercase
]
"*.ipynb" = [
    "N803",   # argument name should be lowercase
    "N806",   # variable in function should be lowercase
    "T201",   # remove print statements
    "ERA001", # remove commented out code
]

# [tool.mypy]
